# gcp-fast-api

./: .gitignore  Dockerfile  deploy-without-cloudbuild.sh  deploy.sh  pyproject.toml  requirements.txt
