[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["kwchun0520 <ckw05200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
